# templates

./: .devcontainer.test.ts  .editorconfig.test.ts  .gitignore  .gitignore.test.ts  .npmignore  .vscode.test.ts  CLAUDE.md  README.md  greeting.ts  index.js  index.ts  package-lock.json  package.json  package.json.test.ts  prettier.config.mjs  prettier.config.test.ts  tsconfig.json  tsconfig.src.json  tsconfig.test.json  vitest.config.mjs  vitest.config.test.ts
.devcontainer/: Dockerfile  devcontainer.env.example  devcontainer.json
src/: Cli.ts  Domain.ts  GitHub.ts  Logger.ts  Utils.test.ts  Utils.ts
src/internal/: templates.ts
templates/devcontainer/: .gitignore  docker-compose.yml  dprint.json  flake.nix  package.json  pnpm-lock.yaml  prettier.config.mjs  pyproject.toml  tsconfig.json  tsconfig.test.json
templates/devcontainer/.claude/skills/chrome-debug/: SKILL.md
templates/devcontainer/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.extend.yml
