[project]
name = "placeholder"
version = "0.0.0"
description = "a placeholder project"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# packages = ["api"]

[tool.uv.sources]
packages-core = { workspace = true }

[tool.uv.workspace]
members = [
  "packages/core",
]

[dependency-groups]
dev = [
  "black==26.1.0",
  "isort==7.0.0",
  "mypy==1.19.1",
  "pylint==4.0.4",
]
